--- a/outputs/lm_result4-1.tex
+++ b/outputs/lm_result4-1.tex
@@ -15,36 +15,37 @@
    \begin{tabular}{lcccc}
       \tabularnewline \midrule \midrule
       Dependent Variable: & \multicolumn{4}{c}{IsTransfer\_over50}\\
-      Sample:                                       & 大麻          & 飲酒          & 喫煙    & 総合 \\   
-      Model:                                        & (1)           & (2)           & (3)     & (4)\\  
+      Sample:                                       & 大麻          & 飲酒          & 喫煙          & 総合 \\   
+      Model:                                        & (1)           & (2)           & (3)           & (4)\\  
       \midrule
       \emph{Variables}\\
-      未成年の違法使用                              & -6.538        & 80.01$^{***}$ & -31.04  & -1.318\\   
-                                                    & (4.335)       & (22.38)       & (69.08) & (0.8545)\\   
-      未成年の違法使用 $\times$ 下の兄弟の数        & -16.43$^{**}$ & -50.25        & -73.84  & -0.1834\\   
-                                                    & (7.200)       & (42.25)       & (83.22) & (0.1521)\\   
-      未成年の違法使用 $\times$ 下の兄弟との年齢差  & 4.207$^{**}$  & 0.2671        & 20.34   & 0.1259\\   
-                                                    & (1.615)       & (7.271)       & (22.20) & (0.0762)\\   
-      下の兄弟の数                                  &               &               &         & -0.3137$^{*}$\\   
-                                                    &               &               &         & (0.1663)\\   
-      下の兄弟との年齢差                            &               &               &         & -0.1114$^{**}$\\   
-                                                    &               &               &         & (0.0546)\\   
+      未成年の違法使用                              & -0.0976       & -0.1157       & -0.1193       & -0.0741\\   
+                                                    & (0.0834)      & (0.0735)      & (0.1098)      & (0.0716)\\   
+      下の兄弟の数                                  & 0.0864        & 0.0830        & 0.0678        & 0.0879\\   
+                                                    & (0.0845)      & (0.0891)      & (0.0795)      & (0.0845)\\   
+      下の兄弟との年齢差                            & -0.0220       & -0.0461       & -0.0239       & -0.0492$^{*}$\\   
+                                                    & (0.0228)      & (0.0283)      & (0.0211)      & (0.0253)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数        & -0.1240       & -0.0604       & -0.1241       & -0.1130$^{*}$\\   
+                                                    & (0.0984)      & (0.0712)      & (0.1091)      & (0.0620)\\   
+      未成年の違法使用 $\times$ 下の兄弟との年齢差  & 0.0829$^{**}$ & 0.0781$^{**}$ & 0.0984$^{**}$ & 0.0836$^{***}$\\   
+                                                    & (0.0417)      & (0.0318)      & (0.0431)      & (0.0299)\\   
       \midrule
       \emph{Fixed-effects}\\
-      Mother ID                                     & Yes           & Yes           & Yes     & Yes\\  
-      ChildID                                       & Yes           & Yes           & Yes     & \\  
-      Birth Year                                    & Yes           & Yes           & Yes     & Yes\\  
+      Mother ID                                     & Yes           & Yes           & Yes           & Yes\\  
+      Birth Year                                    & Yes           & Yes           & Yes           & Yes\\  
+      Age                                           & Yes           & Yes           & Yes           & Yes\\  
+      Year                                          & Yes           & Yes           & Yes           & Yes\\  
       \midrule
       \emph{Fit statistics}\\
-      Observations                                  & 398           & 678           & 341     & 774\\  
-      R$^2$                                         & 0.63435       & 0.60115       & 0.61714 & 0.36665\\  
-      Within R$^2$                                  & 0.09537       & 0.02663       & 0.02185 & 0.01186\\  
+      Observations                                  & 1,196         & 1,114         & 1,177         & 1,212\\  
+      R$^2$                                         & 0.73293       & 0.73167       & 0.72529       & 0.72801\\  
+      Within R$^2$                                  & 0.02488       & 0.02808       & 0.02112       & 0.03147\\  
       \midrule \midrule
       \multicolumn{5}{l}{\emph{Clustered (Mother ID) standard-errors in parentheses}}\\
       \multicolumn{5}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
    \end{tabular}
    
-   \begin{tablenotes}\item 18歳以上24歳以下の出生順位が4以下を対象
+   \begin{tablenotes}\item 18歳以上23歳以下を対象
    \end{tablenotes}
 \end{threeparttable}
 \par\endgroup
