--- a/outputs/lm_result4-2.tex
+++ b/outputs/lm_result4-2.tex
@@ -15,38 +15,41 @@
    \begin{tabular}{lcccc}
       \tabularnewline \midrule \midrule
       Dependent Variable: & \multicolumn{4}{c}{IsTransfer\_over50}\\
-      Sample:                                       & 大麻           & 飲酒          & 喫煙    & 総合 \\   
-      Model:                                        & (1)            & (2)           & (3)     & (4)\\  
+      Sample:                                       & 大麻                  & 飲酒         & 喫煙          & 総合 \\   
+      Model:                                        & (1)                   & (2)          & (3)           & (4)\\  
       \midrule
       \emph{Variables}\\
-      未成年の違法使用                              & -6.701         & 84.76$^{***}$ & -30.87  & -1.175\\   
-                                                    & (4.464)        & (27.14)       & (69.75) & (0.8571)\\   
-      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 1  & -14.54$^{**}$  & -68.85$^{**}$ & -75.91  & -0.0064\\   
-                                                    & (6.674)        & (34.00)       & (147.8) & (0.1778)\\   
-      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 2  & -160.2$^{***}$ & -100.8        & -146.4  & -0.5962$^{**}$\\   
-                                                    & (4.449)        & (87.20)       & (189.3) & (0.2933)\\   
-      未成年の違法使用 $\times$ 下の兄弟との年齢差  & 3.754$^{***}$  & 2.211         & 20.78   & 0.1383$^{*}$\\   
-                                                    & (1.267)        & (4.963)       & (28.80) & (0.0710)\\   
-      下の兄弟の数                                  &                &               &         & -0.3119$^{*}$\\   
-                                                    &                &               &         & (0.1690)\\   
-      下の兄弟との年齢差                            &                &               &         & -0.1656$^{**}$\\   
-                                                    &                &               &         & (0.0641)\\   
+      未成年の違法使用                              & -0.0997               & -0.1137      & -0.1055       & -0.0749\\   
+                                                    & (0.0856)              & (0.0749)     & (0.1127)      & (0.0740)\\   
+      下の兄弟の数                                  & 0.0742                & 0.0773       & 0.0771        & 0.0764\\   
+                                                    & (0.0824)              & (0.0948)     & (0.0842)      & (0.0914)\\   
+      下の兄弟との年齢差                            & -0.0244               & -0.0460      & -0.0210       & -0.0525$^{*}$\\   
+                                                    & (0.0227)              & (0.0305)     & (0.0221)      & (0.0280)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 1  & -0.0319               & -0.0783      & -0.2166       & -0.0917\\   
+                                                    & (0.2557)              & (0.1834)     & (0.2237)      & (0.1561)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 2  & -0.3013               & -0.1901      & -0.3053       & -0.2965$^{**}$\\   
+                                                    & (0.1951)              & (0.1579)     & (0.4275)      & (0.1399)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 3  & $6.45\times 10^{-5}$  & -0.0910      & -0.4085       & -0.2280\\   
+                                                    & (0.4118)              & (0.2735)     & (0.3243)      & (0.2336)\\   
+      未成年の違法使用 $\times$ 下の兄弟との年齢差  & 0.0588                & 0.0820$^{*}$ & 0.1155$^{**}$ & 0.0791$^{**}$\\   
+                                                    & (0.0651)              & (0.0454)     & (0.0570)      & (0.0385)\\   
       \midrule
       \emph{Fixed-effects}\\
-      Mother ID                                     & Yes            & Yes           & Yes     & Yes\\  
-      ChildID                                       & Yes            & Yes           & Yes     & \\  
-      Birth Year                                    & Yes            & Yes           & Yes     & Yes\\  
+      Mother ID                                     & Yes                   & Yes          & Yes           & Yes\\  
+      Year                                          & Yes                   & Yes          & Yes           & Yes\\  
+      Age                                           & Yes                   & Yes          & Yes           & Yes\\  
+      Birth Year                                    & Yes                   & Yes          & Yes           & Yes\\  
       \midrule
       \emph{Fit statistics}\\
-      Observations                                  & 398            & 678           & 341     & 774\\  
-      R$^2$                                         & 0.63902        & 0.60138       & 0.61714 & 0.37004\\  
-      Within R$^2$                                  & 0.10694        & 0.02721       & 0.02185 & 0.01714\\  
+      Observations                                  & 1,196                 & 1,114        & 1,177         & 1,212\\  
+      R$^2$                                         & 0.73384               & 0.73235      & 0.72544       & 0.72899\\  
+      Within R$^2$                                  & 0.02819               & 0.03054      & 0.02165       & 0.03496\\  
       \midrule \midrule
       \multicolumn{5}{l}{\emph{Clustered (Mother ID) standard-errors in parentheses}}\\
       \multicolumn{5}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
    \end{tabular}
    
-   \begin{tablenotes}\item 18歳以上24歳以下の出生順位が4以下を対象
+   \begin{tablenotes}\item 18歳以上23歳以下を対象
    \end{tablenotes}
 \end{threeparttable}
 \par\endgroup
