--- a/outputs/lm_result5-2.tex
+++ b/outputs/lm_result5-2.tex
@@ -15,38 +15,41 @@
    \begin{tabular}{lcccc}
       \tabularnewline \midrule \midrule
       Dependent Variable: & \multicolumn{4}{c}{IsTransfered}\\
-      Sample:                                       & 大麻    & 飲酒    & 喫煙    & 総合 \\   
-      Model:                                        & (1)     & (2)     & (3)     & (4)\\  
+      Sample:                                       & 大麻           & 飲酒     & 喫煙     & 総合 \\   
+      Model:                                        & (1)            & (2)      & (3)      & (4)\\  
       \midrule
       \emph{Variables}\\
-      未成年の違法使用                              & -0.2808 & -25.32  & 1.097   & -0.8660\\   
-                                                    & (3.081) & (24.06) & (31.50) & (0.8496)\\   
-      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 1  & -0.7537 & 1.581   & -97.19  & -0.2363\\   
-                                                    & (4.747) & (41.52) & (119.3) & (0.1628)\\   
-      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 2  & 16.61   & 47.91   & -18.04  & -0.4361\\   
-                                                    & (10.52) & (50.45) & (173.7) & (0.3074)\\   
-      未成年の違法使用 $\times$ 下の兄弟との年齢差  & -1.696  & 14.96   & 11.66   & 0.0227\\   
-                                                    & (1.636) & (9.140) & (30.06) & (0.0646)\\   
-      下の兄弟の数                                  &         &         &         & -0.0323\\   
-                                                    &         &         &         & (0.1629)\\   
-      下の兄弟との年齢差                            &         &         &         & -0.0447\\   
-                                                    &         &         &         & (0.0682)\\   
+      未成年の違法使用                              & -0.1311$^{**}$ & 0.0261   & -0.0554  & -0.0303\\   
+                                                    & (0.0638)       & (0.0595) & (0.0726) & (0.0576)\\   
+      下の兄弟の数                                  & -0.0809        & -0.0164  & -0.0844  & -0.0524\\   
+                                                    & (0.0520)       & (0.0590) & (0.0526) & (0.0553)\\   
+      下の兄弟との年齢差                            & -0.0236$^{*}$  & -0.0083  & -0.0180  & -0.0157\\   
+                                                    & (0.0141)       & (0.0162) & (0.0142) & (0.0163)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 1  & 0.1077         & -0.0424  & 0.1180   & -0.0189\\   
+                                                    & (0.1339)       & (0.1068) & (0.1547) & (0.0934)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 2  & 0.1191         & -0.0824  & 0.1655   & -0.0451\\   
+                                                    & (0.1112)       & (0.1109) & (0.1907) & (0.1028)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 3  & -0.0075        & -0.2629  & -0.0661  & -0.1476\\   
+                                                    & (0.1572)       & (0.1831) & (0.2392) & (0.1654)\\   
+      未成年の違法使用 $\times$ 下の兄弟との年齢差  & -0.0003        & -0.0184  & -0.0364  & -0.0089\\   
+                                                    & (0.0315)       & (0.0302) & (0.0362) & (0.0269)\\   
       \midrule
       \emph{Fixed-effects}\\
-      Mother ID                                     & Yes     & Yes     & Yes     & Yes\\  
-      ChildID                                       & Yes     & Yes     & Yes     & \\  
-      Birth Year                                    & Yes     & Yes     & Yes     & Yes\\  
+      Mother ID                                     & Yes            & Yes      & Yes      & Yes\\  
+      Year                                          & Yes            & Yes      & Yes      & Yes\\  
+      Age                                           & Yes            & Yes      & Yes      & Yes\\  
+      Birth Year                                    & Yes            & Yes      & Yes      & Yes\\  
       \midrule
       \emph{Fit statistics}\\
-      Observations                                  & 701     & 1,220   & 665     & 1,366\\  
-      R$^2$                                         & 0.43982 & 0.50814 & 0.47579 & 0.30135\\  
-      Within R$^2$                                  & 0.01572 & 0.01960 & 0.00876 & 0.00506\\  
+      Observations                                  & 2,372          & 2,227    & 2,334    & 2,391\\  
+      R$^2$                                         & 0.64264        & 0.64269  & 0.64050  & 0.64371\\  
+      Within R$^2$                                  & 0.00711        & 0.01084  & 0.00696  & 0.00890\\  
       \midrule \midrule
       \multicolumn{5}{l}{\emph{Clustered (Mother ID) standard-errors in parentheses}}\\
       \multicolumn{5}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
    \end{tabular}
    
-   \begin{tablenotes}\item 18歳以上24歳以下の出生順位が4以下を対象
+   \begin{tablenotes}\item 18歳以上23歳以下を対象
    \end{tablenotes}
 \end{threeparttable}
 \par\endgroup
