--- a/outputs/lm_result6-1.tex
+++ b/outputs/lm_result6-1.tex
@@ -12,36 +12,37 @@
    \begin{tabular}{lcccc}
       \tabularnewline \midrule \midrule
       Dependent Variable: & \multicolumn{4}{c}{IsLiveTogether}\\
-      Sample:                                       & 大麻           & 飲酒          & 喫煙         & 総合 \\   
-      Model:                                        & (1)            & (2)           & (3)          & (4)\\  
+      Sample:                                       & 大麻     & 飲酒          & 喫煙           & 総合 \\   
+      Model:                                        & (1)      & (2)           & (3)            & (4)\\  
       \midrule
       \emph{Variables}\\
-      未成年の違法使用                              & -1.575         & 73.77$^{**}$  & 36.52        & -0.2460\\   
-                                                    & (2.387)        & (32.73)       & (60.02)      & (0.8784)\\   
-      未成年の違法使用 $\times$ 下の兄弟の数        & -26.44$^{***}$ & -72.01$^{**}$ & -159.1       & 0.2446\\   
-                                                    & (8.544)        & (32.63)       & (119.4)      & (0.1753)\\   
-      未成年の違法使用 $\times$ 下の兄弟との年齢差  & 6.605$^{**}$   & 1.209         & 50.20$^{**}$ & 0.0623\\   
-                                                    & (2.530)        & (6.711)       & (23.34)      & (0.0620)\\   
-      下の兄弟の数                                  &                &               &              & -0.1295\\   
-                                                    &                &               &              & (0.1798)\\   
-      下の兄弟との年齢差                            &                &               &              & -0.0359\\   
-                                                    &                &               &              & (0.0588)\\   
+      未成年の違法使用                              & -0.0935  & -0.1438$^{*}$ & -0.1923$^{**}$ & -0.1222\\   
+                                                    & (0.0853) & (0.0808)      & (0.0973)       & (0.0817)\\   
+      下の兄弟の数                                  & -0.0514  & -0.0763       & -0.0597        & -0.0696\\   
+                                                    & (0.0670) & (0.0702)      & (0.0678)       & (0.0659)\\   
+      下の兄弟との年齢差                            & 0.0114   & 0.0124        & 0.0106         & 0.0038\\   
+                                                    & (0.0184) & (0.0223)      & (0.0167)       & (0.0213)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数        & -0.0158  & 0.0218        & -0.0065        & -0.0095\\   
+                                                    & (0.0693) & (0.0624)      & (0.0635)       & (0.0557)\\   
+      未成年の違法使用 $\times$ 下の兄弟との年齢差  & 0.0164   & 0.0183        & 0.0213         & 0.0141\\   
+                                                    & (0.0291) & (0.0279)      & (0.0305)       & (0.0259)\\   
       \midrule
       \emph{Fixed-effects}\\
-      Mother ID                                     & Yes            & Yes           & Yes          & Yes\\  
-      ChildID                                       & Yes            & Yes           & Yes          & \\  
-      Birth Year                                    & Yes            & Yes           & Yes          & Yes\\  
+      Mother ID                                     & Yes      & Yes           & Yes            & Yes\\  
+      Year                                          & Yes      & Yes           & Yes            & Yes\\  
+      Age                                           & Yes      & Yes           & Yes            & Yes\\  
+      Birth Year                                    & Yes      & Yes           & Yes            & Yes\\  
       \midrule
       \emph{Fit statistics}\\
-      Observations                                  & 394            & 673           & 339          & 771\\  
-      R$^2$                                         & 0.66785        & 0.61386       & 0.63153      & 0.39273\\  
-      Within R$^2$                                  & 0.08694        & 0.02432       & 0.04350      & 0.00758\\  
+      Observations                                  & 1,198    & 1,115         & 1,179          & 1,213\\  
+      R$^2$                                         & 0.73001  & 0.73280       & 0.72504        & 0.72687\\  
+      Within R$^2$                                  & 0.06875  & 0.08037       & 0.07655        & 0.07258\\  
       \midrule \midrule
       \multicolumn{5}{l}{\emph{Clustered (Mother ID) standard-errors in parentheses}}\\
       \multicolumn{5}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
    \end{tabular}
    
-   \begin{tablenotes}\item 18歳以上24歳以下の出生順位が4以下を対象
+   \begin{tablenotes}\item 18歳以上23歳以下を対象
    \end{tablenotes}
 \end{threeparttable}
 \par\endgroup
