--- a/outputs/lm_result6-2.tex
+++ b/outputs/lm_result6-2.tex
@@ -12,38 +12,41 @@
    \begin{tabular}{lcccc}
       \tabularnewline \midrule \midrule
       Dependent Variable: & \multicolumn{4}{c}{IsLiveTogether}\\
-      Sample:                                       & 大麻           & 飲酒          & 喫煙         & 総合 \\   
-      Model:                                        & (1)            & (2)           & (3)          & (4)\\  
+      Sample:                                       & 大麻     & 飲酒          & 喫煙          & 総合 \\   
+      Model:                                        & (1)      & (2)           & (3)           & (4)\\  
       \midrule
       \emph{Variables}\\
-      未成年の違法使用                              & -1.489         & 73.72$^{***}$ & 43.37        & -0.2527\\   
-                                                    & (2.372)        & (22.27)       & (60.05)      & (0.8888)\\   
-      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 1  & -27.17$^{***}$ & -71.81        & -240.7       & 0.2364\\   
-                                                    & (8.854)        & (111.3)       & (159.0)      & (0.1733)\\   
-      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 2  & -5.285         & -144.0$^{**}$ & -111.5$^{*}$ & 0.5001\\   
-                                                    & (3.514)        & (62.81)       & (62.05)      & (0.3976)\\   
-      未成年の違法使用 $\times$ 下の兄弟との年齢差  & 6.774$^{***}$  & 1.188         & 68.11$^{**}$ & 0.0617\\   
-                                                    & (2.543)        & (14.92)       & (27.78)      & (0.0621)\\   
-      下の兄弟の数                                  &                &               &              & -0.1296\\   
-                                                    &                &               &              & (0.1802)\\   
-      下の兄弟との年齢差                            &                &               &              & -0.0334\\   
-                                                    &                &               &              & (0.0610)\\   
+      未成年の違法使用                              & -0.0768  & -0.1439$^{*}$ & -0.1718$^{*}$ & -0.1181\\   
+                                                    & (0.0879) & (0.0814)      & (0.1028)      & (0.0827)\\   
+      下の兄弟の数                                  & -0.0300  & -0.0744       & -0.0441       & -0.0581\\   
+                                                    & (0.0725) & (0.0744)      & (0.0735)      & (0.0709)\\   
+      下の兄弟との年齢差                            & 0.0165   & 0.0128        & 0.0159        & 0.0079\\   
+                                                    & (0.0192) & (0.0247)      & (0.0203)      & (0.0231)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 1  & -0.2460  & 0.0210        & -0.1435       & -0.0927\\   
+                                                    & (0.2205) & (0.1259)      & (0.1775)      & (0.1173)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 2  & -0.0459  & 0.0585        & -0.0499       & -0.0491\\   
+                                                    & (0.1666) & (0.1270)      & (0.2036)      & (0.1193)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数 $=$ 3  & -0.3971  & 0.0426        & -0.0881       & -0.0481\\   
+                                                    & (0.2535) & (0.2327)      & (0.2246)      & (0.1977)\\   
+      未成年の違法使用 $\times$ 下の兄弟との年齢差  & 0.0654   & 0.0183        & 0.0448        & 0.0314\\   
+                                                    & (0.0437) & (0.0327)      & (0.0389)      & (0.0288)\\   
       \midrule
       \emph{Fixed-effects}\\
-      Mother ID                                     & Yes            & Yes           & Yes          & Yes\\  
-      ChildID                                       & Yes            & Yes           & Yes          & \\  
-      Birth Year                                    & Yes            & Yes           & Yes          & Yes\\  
+      Mother ID                                     & Yes      & Yes           & Yes           & Yes\\  
+      Year                                          & Yes      & Yes           & Yes           & Yes\\  
+      Age                                           & Yes      & Yes           & Yes           & Yes\\  
+      Birth Year                                    & Yes      & Yes           & Yes           & Yes\\  
       \midrule
       \emph{Fit statistics}\\
-      Observations                                  & 394            & 673           & 339          & 771\\  
-      R$^2$                                         & 0.66852        & 0.61386       & 0.63642      & 0.39274\\  
-      Within R$^2$                                  & 0.08876        & 0.02432       & 0.05619      & 0.00760\\  
+      Observations                                  & 1,198    & 1,115         & 1,179         & 1,213\\  
+      R$^2$                                         & 0.73108  & 0.73284       & 0.72544       & 0.72719\\  
+      Within R$^2$                                  & 0.07245  & 0.08051       & 0.07791       & 0.07367\\  
       \midrule \midrule
       \multicolumn{5}{l}{\emph{Clustered (Mother ID) standard-errors in parentheses}}\\
       \multicolumn{5}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
    \end{tabular}
    
-   \begin{tablenotes}\item 18歳以上24歳以下の出生順位が4以下を対象
+   \begin{tablenotes}\item 18歳以上23歳以下を対象
    \end{tablenotes}
 \end{threeparttable}
 \par\endgroup
