--- a/outputs/lm_result2-2.tex
+++ b/outputs/lm_result2-2.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{booktabs}
 \usepackage{fontspec}
+\usepackage{threeparttable}
 \usepackage{luatexja}
 \usepackage{lscape}
 
@@ -12,31 +13,27 @@
 \centering
 \begin{tabular}{lccccc}
    \tabularnewline \midrule \midrule
-   Dependent Variables: & 未成年の違法使用(総合) & 未成年大麻経験  & 未成年飲酒経験 & 未成年喫煙経験 & 高校中退ダミー\\  
+   Dependent Variables: & 未成年の違法使用(総合) & 未成年大麻経験 & 未成年飲酒経験 & 未成年喫煙経験 & 高校中退ダミー\\  
    Sample: & \multicolumn{5}{c}{Logit} \\ 
-   Model:               & (1)                    & (2)             & (3)            & (4)            & (5)\\  
+   Model:               & (1)                    & (2)            & (3)            & (4)            & (5)\\  
    \midrule
    \emph{Variables}\\
-   下の兄弟の数         & -0.8857$^{***}$        & -0.8655$^{*}$   & -0.6605$^{*}$  & -0.5076        & -1.285\\   
-                        & (0.3018)               & (0.4542)        & (0.3648)       & (0.4930)       & (1.847)\\   
-   下の兄弟との年齢差   & -0.1621$^{*}$          & -0.1857         & -0.0537        & -0.2107        & 0.5992\\   
-                        & (0.0857)               & (0.1380)        & (0.1118)       & (0.1533)       & (0.4914)\\   
-   女ダミー             & -0.5589$^{**}$         & -0.9661$^{***}$ & -0.2420        & -1.049$^{***}$ & 1.557\\   
-                        & (0.2430)               & (0.3606)        & (0.2827)       & (0.3867)       & (1.519)\\   
-   兄弟サイズ           & 1.272$^{***}$          &                 &                &                & 15.76$^{***}$\\   
-                        & (0.4567)               &                 &                &                & (3.485)\\   
-   IsUrban              &                        & 0.3886$^{*}$    & -0.0371        & 0.0237         & -1.772$^{**}$\\   
-                        &                        & (0.2280)        & (0.1957)       & (0.1854)       & (0.7765)\\   
+   下の兄弟の数         & -0.9458$^{***}$        & -0.7512$^{*}$  & -0.8381$^{**}$ & -0.8563$^{*}$  & -0.1641\\   
+                        & (0.3172)               & (0.4455)       & (0.3428)       & (0.4703)       & (0.7793)\\   
+   下の兄弟との年齢差   & -0.1690$^{*}$          & -0.1707        & -0.1116        & -0.2692$^{*}$  & 0.1354\\   
+                        & (0.0881)               & (0.1285)       & (0.0952)       & (0.1425)       & (0.1659)\\   
+   女ダミー             & -0.5947$^{**}$         & -0.8246$^{**}$ & -0.4662$^{*}$  & -1.081$^{***}$ & -1.227$^{*}$\\   
+                        & (0.2483)               & (0.3381)       & (0.2689)       & (0.3715)       & (0.7224)\\   
    \midrule
    \emph{Fixed-effects}\\
-   Mother ID            & Yes                    & Yes             & Yes            & Yes            & Yes\\  
-   Birth Year           & Yes                    & Yes             & Yes            & Yes            & Yes\\  
+   Mother ID            & Yes                    & Yes            & Yes            & Yes            & Yes\\  
+   Birth Year           & Yes                    & Yes            & Yes            & Yes            & Yes\\  
    \midrule
    \emph{Fit statistics}\\
-   Observations         & 7,458                  & 2,900           & 4,565          & 2,549          & 481\\  
-   Squared Correlation  & 0.16522                & 0.24779         & 0.21543        & 0.16714        & 0.47036\\  
-   Pseudo R$^2$         & 0.12429                & 0.20201         & 0.15831        & 0.13012        & 0.39569\\  
-   BIC                  & 12,572.3               & 4,984.1         & 8,336.4        & 4,658.1        & 742.57\\  
+   Observations         & 7,283                  & 4,144          & 6,659          & 3,527          & 1,288\\  
+   Squared Correlation  & 0.16680                & 0.19313        & 0.17825        & 0.15573        & 0.18310\\  
+   Pseudo R$^2$         & 0.12548                & 0.15901        & 0.13348        & 0.12480        & 0.14367\\  
+   BIC                  & 12,322.4               & 6,720.2        & 11,189.0       & 5,940.3        & 2,072.2\\  
    \midrule \midrule
    \multicolumn{6}{l}{\emph{Clustered (Mother ID) standard-errors in parentheses}}\\
    \multicolumn{6}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
