--- a/outputs/lm_result3-2.tex
+++ b/outputs/lm_result3-2.tex
@@ -12,39 +12,68 @@
 \begingroup
 \centering
 \begin{threeparttable}[b]
-   \begin{tabular}{lccc}
+   \begin{tabular}{lcccc}
       \tabularnewline \midrule \midrule
-      Dependent Variables:                                & IsTransfer\_over50  & IsTransfered & IsLiveTogether\\  
-      Model:                                              & (1)                 & (2)          & (3)\\  
+      Dependent Variable: & \multicolumn{4}{c}{IsTransfer\_over50}\\
+      Model:                                              & (1)           & (2)             & (3)           & (4)\\  
       \midrule
       \emph{Variables}\\
-      未成年の違法使用(総合)                              & -1.175              & -0.8660      & -0.2527\\   
-                                                          & (0.8571)            & (0.8496)     & (0.8888)\\   
-      下の兄弟の数                                        & -0.3119$^{*}$       & -0.0323      & -0.1296\\   
-                                                          & (0.1690)            & (0.1629)     & (0.1802)\\   
-      下の兄弟との年齢差                                  & -0.1656$^{**}$      & -0.0447      & -0.0334\\   
-                                                          & (0.0641)            & (0.0682)     & (0.0610)\\   
-      未成年の違法使用(総合) $\times$ 下の兄弟の数 $=$ 1  & -0.0064             & -0.2363      & 0.2364\\   
-                                                          & (0.1778)            & (0.1628)     & (0.1733)\\   
-      未成年の違法使用(総合) $\times$ 下の兄弟の数 $=$ 2  & -0.5962$^{**}$      & -0.4361      & 0.5001\\   
-                                                          & (0.2933)            & (0.3074)     & (0.3976)\\   
-      未成年の違法使用(総合) $\times$ 下の兄弟との年齢差  & 0.1383$^{*}$        & 0.0227       & 0.0617\\   
-                                                          & (0.0710)            & (0.0646)     & (0.0621)\\   
+      下の兄弟の数                                        & 0.0232        & 0.0055          & 0.0084        & 0.0362\\   
+                                                          & (0.0678)      & (0.0716)        & (0.0665)      & (0.0662)\\   
+      下の兄弟との年齢差                                  & -0.0333$^{*}$ & -0.0655$^{***}$ & -0.0333$^{*}$ & -0.0685$^{***}$\\   
+                                                          & (0.0197)      & (0.0249)        & (0.0199)      & (0.0236)\\   
+      未成年大麻経験 $\times$ 下の兄弟の数 $=$ 1          & -0.0315       &                 &               &   \\   
+                                                          & (0.1889)      &                 &               &   \\   
+      未成年大麻経験 $\times$ 下の兄弟の数 $=$ 2          & -0.2953       &                 &               &   \\   
+                                                          & (0.1903)      &                 &               &   \\   
+      未成年大麻経験 $\times$ 下の兄弟の数 $=$ 3          & -0.3141       &                 &               &   \\   
+                                                          & (0.2313)      &                 &               &   \\   
+      未成年大麻経験 $\times$ 下の兄弟との年齢差          & 0.0506        &                 &               &   \\   
+                                                          & (0.0497)      &                 &               &   \\   
+      未成年飲酒経験 $\times$ 下の兄弟の数 $=$ 1          &               & -0.2321         &               &   \\   
+                                                          &               & (0.1441)        &               &   \\   
+      未成年飲酒経験 $\times$ 下の兄弟の数 $=$ 2          &               & -0.3719$^{***}$ &               &   \\   
+                                                          &               & (0.1290)        &               &   \\   
+      未成年飲酒経験 $\times$ 下の兄弟の数 $=$ 3          &               & -0.3616$^{*}$   &               &   \\   
+                                                          &               & (0.2112)        &               &   \\   
+      未成年飲酒経験 $\times$ 下の兄弟との年齢差          &               & 0.0930$^{**}$   &               &   \\   
+                                                          &               & (0.0439)        &               &   \\   
+      未成年喫煙経験 $\times$ 下の兄弟の数 $=$ 1          &               &                 & -0.1688       &   \\   
+                                                          &               &                 & (0.1933)      &   \\   
+      未成年喫煙経験 $\times$ 下の兄弟の数 $=$ 2          &               &                 & -0.0992       &   \\   
+                                                          &               &                 & (0.2023)      &   \\   
+      未成年喫煙経験 $\times$ 下の兄弟の数 $=$ 3          &               &                 & -0.3456       &   \\   
+                                                          &               &                 & (0.2263)      &   \\   
+      未成年喫煙経験 $\times$ 下の兄弟との年齢差          &               &                 & 0.0973$^{**}$ &   \\   
+                                                          &               &                 & (0.0445)      &   \\   
+      未成年の違法使用(総合)                              &               &                 &               & -0.0827\\   
+                                                          &               &                 &               & (0.0921)\\   
+      未成年の違法使用(総合) $\times$ 下の兄弟の数 $=$ 1  &               &                 &               & -0.1985\\   
+                                                          &               &                 &               & (0.1223)\\   
+      未成年の違法使用(総合) $\times$ 下の兄弟の数 $=$ 2  &               &                 &               & -0.3353$^{***}$\\   
+                                                          &               &                 &               & (0.1220)\\   
+      未成年の違法使用(総合) $\times$ 下の兄弟の数 $=$ 3  &               &                 &               & -0.4036$^{**}$\\   
+                                                          &               &                 &               & (0.1851)\\   
+      未成年の違法使用(総合) $\times$ 下の兄弟との年齢差  &               &                 &               & 0.0989$^{***}$\\   
+                                                          &               &                 &               & (0.0374)\\   
       \midrule
       \emph{Fixed-effects}\\
-      Mother ID                                           & Yes                 & Yes          & Yes\\  
-      Birth Year                                          & Yes                 & Yes          & Yes\\  
+      Mother ID                                           & Yes           & Yes             & Yes           & Yes\\  
+      Birth Year                                          & Yes           & Yes             & Yes           & Yes\\  
+      Age                                                 & Yes           & Yes             & Yes           & Yes\\  
+      Year                                                & Yes           & Yes             & Yes           & Yes\\  
+      MotherAge                                           & Yes           & Yes             & Yes           & Yes\\  
       \midrule
       \emph{Fit statistics}\\
-      Observations                                        & 774                 & 1,366        & 771\\  
-      R$^2$                                               & 0.37004             & 0.30135      & 0.39274\\  
-      Within R$^2$                                        & 0.01714             & 0.00506      & 0.00760\\  
+      Observations                                        & 1,215         & 1,090           & 1,190         & 1,238\\  
+      R$^2$                                               & 0.75838       & 0.77048         & 0.74654       & 0.75639\\  
+      Within R$^2$                                        & 0.02763       & 0.05471         & 0.03698       & 0.05294\\  
       \midrule \midrule
-      \multicolumn{4}{l}{\emph{Clustered (Mother ID) standard-errors in parentheses}}\\
-      \multicolumn{4}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
+      \multicolumn{5}{l}{\emph{Clustered (Mother ID) standard-errors in parentheses}}\\
+      \multicolumn{5}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
    \end{tabular}
    
-   \begin{tablenotes}\item 18歳以上24歳以下の出生順位が4以下を対象
+   \begin{tablenotes}\item 18歳以上23歳以下を対象
    \end{tablenotes}
 \end{threeparttable}
 \par\endgroup
