--- a/outputs/lm_result5-1.tex
+++ b/outputs/lm_result5-1.tex
@@ -15,36 +15,37 @@
    \begin{tabular}{lcccc}
       \tabularnewline \midrule \midrule
       Dependent Variable: & \multicolumn{4}{c}{IsTransfered}\\
-      Sample:                                       & 大麻    & 飲酒    & 喫煙    & 総合 \\   
-      Model:                                        & (1)     & (2)     & (3)     & (4)\\  
+      Sample:                                       & 大麻          & 飲酒     & 喫煙     & 総合 \\   
+      Model:                                        & (1)           & (2)      & (3)      & (4)\\  
       \midrule
       \emph{Variables}\\
-      未成年の違法使用                              & -1.075  & -29.54  & -4.648  & -0.8605\\   
-                                                    & (3.031) & (22.58) & (31.39) & (0.8498)\\   
-      未成年の違法使用 $\times$ 下の兄弟の数        & 5.440   & 23.61   & -31.29  & -0.2245\\   
-                                                    & (7.195) & (24.42) & (81.44) & (0.1382)\\   
-      未成年の違法使用 $\times$ 下の兄弟との年齢差  & -2.405  & 11.83   & -1.092  & 0.0241\\   
-                                                    & (1.697) & (7.562) & (22.76) & (0.0644)\\   
-      下の兄弟の数                                  &         &         &         & -0.0331\\   
-                                                    &         &         &         & (0.1634)\\   
-      下の兄弟との年齢差                            &         &         &         & -0.0487\\   
-                                                    &         &         &         & (0.0618)\\   
+      未成年の違法使用                              & -0.1180$^{*}$ & 0.0338   & -0.0314  & -0.0260\\   
+                                                    & (0.0616)      & (0.0599) & (0.0707) & (0.0580)\\   
+      下の兄弟の数                                  & -0.0738       & -0.0152  & -0.0768  & -0.0500\\   
+                                                    & (0.0518)      & (0.0568) & (0.0521) & (0.0541)\\   
+      下の兄弟との年齢差                            & -0.0217       & -0.0073  & -0.0163  & -0.0149\\   
+                                                    & (0.0139)      & (0.0160) & (0.0137) & (0.0162)\\   
+      未成年の違法使用 $\times$ 下の兄弟の数        & 0.0321        & -0.0696  & -0.0201  & -0.0397\\   
+                                                    & (0.0479)      & (0.0509) & (0.0757) & (0.0473)\\   
+      未成年の違法使用 $\times$ 下の兄弟との年齢差  & 0.0111        & -0.0142  & -0.0089  & -0.0054\\   
+                                                    & (0.0240)      & (0.0229) & (0.0287) & (0.0215)\\   
       \midrule
       \emph{Fixed-effects}\\
-      Mother ID                                     & Yes     & Yes     & Yes     & Yes\\  
-      ChildID                                       & Yes     & Yes     & Yes     & \\  
-      Birth Year                                    & Yes     & Yes     & Yes     & Yes\\  
+      Mother ID                                     & Yes           & Yes      & Yes      & Yes\\  
+      Year                                          & Yes           & Yes      & Yes      & Yes\\  
+      Age                                           & Yes           & Yes      & Yes      & Yes\\  
+      Birth Year                                    & Yes           & Yes      & Yes      & Yes\\  
       \midrule
       \emph{Fit statistics}\\
-      Observations                                  & 701     & 1,220   & 665     & 1,366\\  
-      R$^2$                                         & 0.43499 & 0.50770 & 0.47358 & 0.30133\\  
-      Within R$^2$                                  & 0.00723 & 0.01871 & 0.00460 & 0.00504\\  
+      Observations                                  & 2,372         & 2,227    & 2,334    & 2,391\\  
+      R$^2$                                         & 0.64238       & 0.64225  & 0.63990  & 0.64355\\  
+      Within R$^2$                                  & 0.00638       & 0.00962  & 0.00529  & 0.00846\\  
       \midrule \midrule
       \multicolumn{5}{l}{\emph{Clustered (Mother ID) standard-errors in parentheses}}\\
       \multicolumn{5}{l}{\emph{Signif. Codes: ***: 0.01, **: 0.05, *: 0.1}}\\
    \end{tabular}
    
-   \begin{tablenotes}\item 18歳以上24歳以下の出生順位が4以下を対象
+   \begin{tablenotes}\item 18歳以上23歳以下を対象
    \end{tablenotes}
 \end{threeparttable}
 \par\endgroup
